# caixin-cli

./: .gitignore  LICENSE  README.md  pyproject.toml
src/caixin/: __init__.py  __main__.py  auth.py  browser.py  cli.py  client.py  config.py  models.py  render.py  utils.py
src/caixin/parsers/: __init__.py  article.py  channel.py  search.py  weekly.py
