[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "caixin-cli"
version = "0.1.0"
description = "CLI to fetch Caixin (财新网) articles and 财新周刊 issues as Markdown"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "caixin-cli" }]
keywords = ["caixin", "财新", "财新周刊", "scraper", "cli"]
dependencies = [
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "markdownify>=0.13",
    "typer>=0.12",
    "rich>=13.0",
    "python-slugify>=8.0",
    "playwright>=1.40",
    "tomli-w>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
caixin = "caixin.cli:app"

[tool.setuptools.packages.find]
where = ["src"]
